Build package for Ubuntu 16.04 (xenial)
Python is 3.5, so Meson 0.48.2 works
Still no dh-virtualenv, but Sphinx 1.3 is available

--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
-dtee (0.0.0-1) jessie; urgency=low
+dtee (0.0.0-1) xenial; urgency=low
 
   * Initial release
 
- -- Simon Arlott <debian@sa.me.uk>  Sat, 10 Nov 2018 16:24:51 +0000
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sat, 10 Nov 2018 18:37:03 +0000
