--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (0.0.1-1) stretch; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Mon, 12 Nov 2018 19:51:40 +0000
+
 dtee (0.0.0-1) stretch; urgency=low
 
   * Initial release
