--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (0.0.1-1) xenial; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Mon, 12 Nov 2018 19:54:31 +0000
+
 dtee (0.0.0-1) xenial; urgency=low
 
   * Initial release
