--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.0.0-1) jessie; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Sun, 09 Dec 2018 11:00:35 +0000
+
 dtee (0.0.1-1) jessie; urgency=medium
 
   * New version
