--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.0.0-1) trusty; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sun, 09 Dec 2018 11:10:44 +0000
+
 dtee (0.0.1-1) trusty; urgency=medium
 
   * Initial release
