--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.0.1-1) stretch; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Sat, 22 Dec 2018 14:27:11 +0000
+
 dtee (1.0.0-1) stretch; urgency=medium
 
   * New version
