--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.0.1-1) bionic; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sat, 22 Dec 2018 14:38:08 +0000
+
 dtee (1.0.0-1) bionic; urgency=medium
 
   * New version
