--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.0-1) stretch; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Sun, 30 May 2021 14:02:38 +0100
+
 dtee (1.0.1-1) stretch; urgency=medium
 
   * New version
