--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.0-1) bionic; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sun, 30 May 2021 14:51:54 +0100
+
 dtee (1.0.1-1) bionic; urgency=medium
 
   * New version
