--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.0-1) focal; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sun, 30 May 2021 13:50:03 +0000
+
 dtee (1.0.1-1) focal; urgency=medium
 
   * Initial release
