--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.1-1) bookworm; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Sat, 20 Apr 2024 10:44:08 +0100
+
 dtee (1.1.0-1) bookworm; urgency=medium
 
   * Initial release
