--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.1-1) focal; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Sat, 20 Apr 2024 11:11:05 +0000
+
 dtee (1.1.0-1) focal; urgency=medium
 
   * New version
