--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.3-1) bullseye; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <debian@sa.me.uk>  Wed, 18 Jun 2025 20:04:13 +0100
+
 dtee (1.1.1-1) bullseye; urgency=medium
 
   * New version
