--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+dtee (1.1.3-1) jammy; urgency=medium
+
+  * New version
+
+ -- Simon Arlott <ubuntu@sa.me.uk>  Wed, 18 Jun 2025 19:27:19 +0000
+
 dtee (1.1.1-1) jammy; urgency=medium
 
   * New version
